k8s-manifestfiles/wm_app_loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wmapploadbalancersvc
spec:
  type: LoadBalancer
  selector:
    app: wm-app
  ports:
  - port: 80
    targetPort: 8080
