k8s-manifestfiles/wm_app_webapp.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wmappsvc-APP_NAME
spec:
  type: ClusterIP
  selector:
     app: wm-app-APP_NAME
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webservice-APP_NAME
  labels:
    wmappp: wmNodePort
spec:
  type: NodePort
  selector:
    app: wm-app-APP_NAME
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wmapp-APP_NAME
  labels:
    app: wm-app-APP_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wm-app-APP_NAME
  template:
    metadata:
      labels:
        app: wm-app-APP_NAME
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/scheme: 'http'
    spec:
      tolerations: 
      - key: "spotInstance" 
        operator: "Equal" 
        value: "true" 
        effect: "PreferNoSchedule"
      affinity:
        nodeAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                - key: lifecycle
                  operator: In
                  values:
                  - Ec2Spot
      containers:
      - name: wmapp
        image: CONTAINER_IMAGE
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 22
        resources:
          requests:
            memory: "1024Mi"
            cpu: "500m"
          limits:
            memory: "2048Mi"
            cpu: "1000m"
