k8s-manifestfiles/wm_app_alb_ingress_service.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wmapp-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
   # alb.ingress.kubernetes.io/certificate-arn: 
   # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
   # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
   # alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    #alb.ingress.kubernetes.io/healthcheck-path: '/myapplication/metrics'
    #alb.ingress.kubernetes.io/healthcheck-port: '8080'
    #alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    #alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    #alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    #alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    #alb.ingress.kubernetes.io/success-codes: '200'
  labels:
    app: wmapp-ingress
spec:
  rules:
    - http:
        paths:
          - path: /myapplication/*
            backend:
              serviceName: webservice-APP_NAME
              servicePort: 8080
