k8s-manifestfiles/wm_app_ingress_service.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wmapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
       paths:
       - path: /myapplication/*
         backend:
           serviceName: wmappsvc
           servicePort: 80
