k8s-manifestfiles/wm_app_nginx_ingress_service.yml
# Use this ingress-service for AKS environment
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wmapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - secretName: mytlssecret
  rules:
    - host: testapp.com
      http:
       paths:
       - path: /myapplication/*
         backend:
           serviceName: wmappsvc
           servicePort: 80
